[profile.dev]
split-debuginfo = "unpacked"

[workspace]
members = [
    "merge-two-sorted-lists",
    "remove-duplicates-from-sorted-array",
    "remove-element",
    "implement-strstr",
    "search-insert-position",
    "count-and-say",
    "maximum-subarray",
    "merge-intervals",
    "remove-duplicates-from-sorted-array-ii",
    "remove-duplicates-from-sorted-list",
    "single-number",
    "single-number-ii",
    "single-number-iii",
    "number-of-1-bits",
    "valid-anagram",
    "missing-number",
    "intersection-of-two-arrays",
    "third-maximum-number",
    "find-pivot-index",
    "remove-all-adjacent-duplicates-in-string",
    "design-parking-system",
    "maximum-element-after-decreasing-and-rearranging",
    "zai-pai-xu-shu-zu-zhong-cha-zhao-shu-zi-lcof",
    "keyboard-row",
    "distribute-candies",
    "range-addition-ii",
    "dui-cheng-de-er-cha-shu-lcof",
    "detect-capital",
    "contains-duplicate-ii",
    "longest-palindromic-substring",
    "zigzag-conversion",
    "string-to-integer-atoi",
    "length-of-last-word",
    "palindrome-linked-list",
    "plus-one",
    "add-binary",
    "longest-substring-without-repeating-characters",
    "median-of-two-sorted-arrays",
    "reverse-integer",
    "reverse-linked-list",
    "convert-binary-number-in-a-linked-list-to-integer",
    "remove-nth-node-from-end-of-list",
    "number-of-valid-words-in-a-sentence",
    "sqrtx",
    "number-of-steps-to-reduce-a-number-to-zero",
    "reverse-prefix-of-word",
    "move-zeroes",
    "sum-of-unique-elements",
    "count-number-of-pairs-with-absolute-difference-k",
    "maximum-number-of-balloons",
    "single-element-in-a-sorted-array",
    "lucky-numbers-in-a-matrix",
    "find-center-of-star-graph",
    "one-bit-and-2-bit-characters",
    "implement-queue-using-stacks",
    "fibonacci-number",
    "best-time-to-buy-and-sell-stock-ii",
    "rotate-array",
    "contains-duplicate",
    "reverse-only-letters",
    "min-cost-climbing-stairs",
    "intersection-of-two-arrays-ii",
    "two-sum",
    "fan-zhuan-dan-ci-shun-xu-lcof",
    "is-unique-lcci",
    "lian-biao-zhong-dao-shu-di-kge-jie-dian-lcof",
    "generate-parentheses",
    "insert-interval",
    "two-sum-ii-input-array-is-sorted",
    "majority-element",
    "first-bad-version",
    "reverse-string",
]
