[profile.dev]
split-debuginfo = "unpacked"

[profile.release]
strip = true

[workspace]
members = [
    "sort-an-array",
    "backspace-string-compare",
    "license-key-formatting",
    "next-permutation",
    "valid-parentheses",
    "longest-common-prefix",
    "roman-to-integer",
    "palindrome-number",
    "prime-number-of-set-bits-in-binary-representation",
    "self-dividing-numbers",
    "binary-number-with-alternating-bits",
    "add-two-numbers",
    "concatenation-of-array",
    "check-if-all-the-integers-in-a-range-are-covered",
    "latest-time-by-replacing-hidden-digits",
    "running-sum-of-1d-array",
    "squares-of-a-sorted-array",
    "middle-of-the-linked-list",
    "binary-search",
    "reverse-words-in-a-string-iii",
    "reverse-string",
    "first-bad-version",
    "majority-element",
    "two-sum-ii-input-array-is-sorted",
    "insert-interval",
    "generate-parentheses",
    "lian-biao-zhong-dao-shu-di-kge-jie-dian-lcof",
    "is-unique-lcci",
    "fan-zhuan-dan-ci-shun-xu-lcof",
    "two-sum",
    "intersection-of-two-arrays-ii",
    "min-cost-climbing-stairs",
    "reverse-only-letters",
    "contains-duplicate",
    "rotate-array",
    "best-time-to-buy-and-sell-stock-ii",
    "fibonacci-number",
    "implement-queue-using-stacks",
    "one-bit-and-2-bit-characters",
    "find-center-of-star-graph",
    "lucky-numbers-in-a-matrix",
    "single-element-in-a-sorted-array",
    "maximum-number-of-balloons",
    "count-number-of-pairs-with-absolute-difference-k",
    "sum-of-unique-elements",
    "move-zeroes",
    "reverse-prefix-of-word",
    "number-of-steps-to-reduce-a-number-to-zero",
    "sqrtx",
    "number-of-valid-words-in-a-sentence",
    "remove-nth-node-from-end-of-list",
    "convert-binary-number-in-a-linked-list-to-integer",
    "reverse-linked-list",
    "reverse-integer",
    "median-of-two-sorted-arrays",
    "longest-substring-without-repeating-characters",
    "add-binary",
    "plus-one",
    "palindrome-linked-list",
    "length-of-last-word",
    "string-to-integer-atoi",
    "zigzag-conversion",
    "longest-palindromic-substring",
    "contains-duplicate-ii",
    "detect-capital",
    "dui-cheng-de-er-cha-shu-lcof",
    "range-addition-ii",
    "distribute-candies",
    "keyboard-row",
    "zai-pai-xu-shu-zu-zhong-cha-zhao-shu-zi-lcof",
    "maximum-element-after-decreasing-and-rearranging",
    "design-parking-system",
    "remove-all-adjacent-duplicates-in-string",
    "find-pivot-index",
    "third-maximum-number",
    "intersection-of-two-arrays",
    "missing-number",
    "valid-anagram",
    "number-of-1-bits",
    "single-number-iii",
    "single-number-ii",
    "single-number",
    "remove-duplicates-from-sorted-list",
    "remove-duplicates-from-sorted-array-ii",
    "merge-intervals",
    "maximum-subarray",
    "count-and-say",
    "search-insert-position",
    "implement-strstr",
    "remove-element",
    "remove-duplicates-from-sorted-array",
    "merge-two-sorted-lists",
]
